# ollama-rag-de

./: Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  env.example  package-lock.json  pyproject.toml
.github/workflows/: deploy_to_pypi.yml
src/ollama_rag_de/: cli.py  engine.py  process_folder.py  server.py  settings.py  vector_store.py
src/ollama_rag_de/api/: router.py
src/ollama_rag_de/chat/: router.py
src/ollama_rag_de/util/: dataframes.py  embed_model.py  file.py
